@@ -7,9 +7,9 @@ allow_cluster_ops=true
 # Address and credentials that will be used to check auth tokens
 os_auth_host=172.18.79.139
 os_auth_port=35357
-os_admin_username=admin
+os_admin_username=qa-user
 os_admin_password=swordfish
-os_admin_tenant_name=admin
+os_admin_tenant_name=qa
 
 # (Optional) Name of log file to output to. If not set,
 # logging will go to stdout. (string value)
