@@ -2,6 +2,6 @@ OS_USERNAME = "qa-user"
 OS_PASSWORD = "swordfish"
 OS_TENANT_NAME = "qa"
 OS_AUTH_URL = "http://172.18.79.139:35357/v2.0/"
-SAVANNA_HOST = '172.18.79.226'
+SAVANNA_HOST = '172.18.79.209'
 SAVANNA_PORT = '8080'
 SAVANNA_IMAGE_ID = '51752c61-f73a-456c-98fb-192c0a448554'
