@@ -24,24 +24,24 @@ class TestValidationApiForClusters(ValidationTestCase):
         super(TestValidationApiForClusters, self).setUp()
         Telnet(self.host, self.port)
 
-    def test_crud_operation_for_cluster(self):
-        nt_body = self.make_nt('master_node.medium', 'JT+NN', 1234, 2345)
-        data_nt_master = self._post_object(self.url_nt, nt_body, 202)
-
-        nt_body = self.make_nt('worker_node.medium', 'TT+DN', 1234, 2345)
-        data_nt_worker = self._post_object(self.url_nt, nt_body, 202)
-
-        try:
-            cluster_body = self.make_cluster_body(
-                'QA-cluster', 'master_node.medium', 'worker_node.medium', 3)
-            get_cluster_body = self._get_body_cluster(
-                'QA-cluster', 'master_node.medium', 'worker_node.medium', 3)
-
-            self._crud_object(cluster_body, get_cluster_body, self.url_cluster)
-
-        finally:
-            self.delete_node_template(data_nt_master)
-            self.delete_node_template(data_nt_worker)
+    # def test_crud_operation_for_cluster(self):
+    #     nt_body = self.make_nt('master_node.medium', 'JT+NN', 1234, 2345)
+    #     data_nt_master = self._post_object(self.url_nt, nt_body, 202)
+    #
+    #     nt_body = self.make_nt('worker_node.medium', 'TT+DN', 1234, 2345)
+    #     data_nt_worker = self._post_object(self.url_nt, nt_body, 202)
+    #
+    #     try:
+    #         cluster_body = self.make_cluster_body(
+    #             'QA-cluster', 'master_node.medium', 'worker_node.medium', 3)
+    #         get_cluster_body = self._get_body_cluster(
+    #             'QA-cluster', 'master_node.medium', 'worker_node.medium', 3)
+    #
+    #         self._crud_object(cluster_body, get_cluster_body, self.url_cluster)
+    #
+    #     finally:
+    #         self.delete_node_template(data_nt_master)
+    #         self.delete_node_template(data_nt_worker)
 
         # nt_body = self.make_nt('master_node.medium', 'JT+NN', 1234, 2345)
         # data_nt_master = self._post_object(self.url_nt, nt_body, 202)
