@@ -1,3 +1,9 @@
+commit dddc244e567ba1766efc23ded3080bccf9d12507
+Author: LobankovYV <lobankovyy@lobankovyy-desktop.(none)>
+Date:   Wed May 8 14:57:01 2013 +0400
+
+    changed name for url of cluster and nt
+
 commit 6e0299d2e96bf03ad86b0e1fde199dbbc6c65552
 Author: LobankovYV <lobankovyy@lobankovyy-desktop.(none)>
 Date:   Wed May 8 12:55:52 2013 +0400
